
* wald() function added for testing linear constraints. Useful in situations
  for testing sets of parameters rather than estimating a new model for a liklihood ratio test

* Methods that use the MHRM can now estimate the nominal, gpcm, mcm, and 4PL models

* fscores computable for multiple group objects and in general play nicer with missing data
  (reported by Judith Conijn)

* Oblique rotation bug fix for fscores and coef (reported by Pedro A. Barbetta)  

* Added the item probability functions in the ?mirt documentation for reference

* General bug fixes as usual that were spawned from all the added features 

----------------------------------------------------------------
mirt 0.3.1
----------------------------------------------------------------

* Individual classes now correspond to the type of methods: ExploratoryClass, 
  ConfirmatoryClass, and MultipleGroupClass

* plot and itemplot now works for confmirt objects

* mirt can now make use of confmirt.model specified objects and hence be confirmatory as well 

* stochastic estimation of factor scores removed entirely, now only quadrature based methods
  for all objects. Also, bfactor returned objects now will estimate all the factors scores instead
  of just the general dimension

* Standard errors for mirt now automatically calculated (borrowed from running a tweaked
  MHRM run)

----------------------------------------------------------------
mirt 0.3.0
----------------------------------------------------------------

* radically changed the underlying mechanisms for the 
  estimation functions and in doing so have decided that polymirt() was 
  redundant and could be replaced completely by calling confmirt(data, number_of_factors). The
  reason for the change was to facilitate a wider range or MIRT models and to allow for easier
  extensions to future multiple group analysis and multilevel modelling 

* new univariate and MV models are available, including the 1-4 parameter logistic